<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiDaDiDa</string>
    <string name="newProject">+create new project</string>
    <string name="inputHint">input name here</string>
    <string name="chooseProject">(click to choose, long click to see history)</string>
    <string name="setTimerOff">set timer off</string>
    <string name="setTimerOn">set timer on</string>
    <string name="timeResult">time accumulated : %1$dhours %2$dminutes %3$dseconds</string>
    <string name="timeResultShort">%1$d:%2$d:%3$d</string>
    <string name="timeAccumulating">time accumulating</string>
    <string name="menu_settings">settings</string>
    <string name="title_activity_intent_filter_receiver">@string/app_name</string>
    <string name="unaccumulatedOnly">show unaccumulated only?</string>
    <string name="within2daysonly">show within 2 days only?</string>
    <string name="tomato_start_end_string">%1$s\n%2$s -> %3$s duration: %4$s</string>
    <string name="manual_record_time_consuming">manual record time consuming</string>
    <string name="title_activity_tamanual_record">@string/manual_record_time_consuming</string>
    <string name="begin_time">begin time</string>
    <string name="end_time">end time</string>
    <string name="input_tomato_note_hint">input your note here</string>
    <string name="history">history</string>
    <string name="rename">rename</string>
    <string name="delete">delete</string>
    <string name="past_24_hours">records within 24 hours</string>
    <string name="symbol_to">" --- "</string>
    <string name="past_7_days">records within 7 days</string>
    <string name="managerproject">manage projects</string>
    <string name="rating">rating</string>
    <string name="note">note</string>
    <string name="no_unaccumalated_item_within_2_days">no unaccumulated item within 2 days.</string>
    <string name="no_item_within_2_days">no item within 2 days.</string>
    <string name="no_unaccumalated_item">no unaccumulated item.</string>
    <string name="no_item">no item.</string>
    <string name="sort_by_total_time_from_less_to_more">sort by total time (less to more)</string>
    <string name="sort_by_total_time_from_more_to_less">sort by total time (more to less)</string>
    <string name="sort_by_last_time_past_to_Recent">sort by last used time (past to recent)</string>
    <string name="sort_by_last_time_recent_to_past">sort by last used time (recent to past)</string>

</resources>