<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TAManualRecord" >

    <com.qidu.lin.time.accumulater.fg.TAProjectButton
        android:id="@+id/project"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseProject"
        tools:ignore="NewApi" >
    </com.qidu.lin.time.accumulater.fg.TAProjectButton>

    <include layout="@layout/divider" />

    <Button
        android:id="@+id/begin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_time"
        tools:ignore="NewApi" >
    </Button>

    <include layout="@layout/divider" />

    <Button
        android:id="@+id/end"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        tools:ignore="NewApi" >
    </Button>

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".TAManualRecord" >

        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@android:string/cancel"
            tools:ignore="NewApi" >
        </Button>

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerHorizontal"
            tools:ignore="NewApi" />

        <Button
            android:id="@+id/ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@android:string/ok"
            tools:ignore="NewApi" >
        </Button>
    </LinearLayout>

    <include layout="@layout/divider" />

</LinearLayout>